Adds more validations and tests
Signed-off-by: Gabriel-Trintinalia <gabriel.trintinalia@consensys.net>